Thu Aug 13 10:31:29 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/XSCRT/Elements.hpp:
          Fized fuzz/borland errors

Thu Aug 13 08:57:29 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeManager/Node_Manager_Module.cpp:
          Fixed compile error

Thu Aug 13 07:56:29 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/XSCRT/Elements.hpp:
          Removed code for vc6

Thu Aug 13 01:23:29 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>

        * DAnCE/NodeManager/Node_Manager_Module.cpp:

          Unicode compile errors.

Wed Aug 12 18:26:09 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>

        * DAnCE/NodeApplication/NodeApplication.mpc:
        * MPC/config/ciao_cs_client.mpb:

          try to fix link problems introduced by
        Tue Aug 11 11:51:29 UTC 2009  ChangeLog  <William R. Otte>

Wed Aug 12 18:00:56 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/XMLSchema/Traversal.hpp:
        * tools/Config_Handlers/XMLSchema/Types.hpp:

          Integrated more cleanly the changes from XSC XSCRT/XMLSchema.

Wed Aug 12 13:30:50 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/XMLSchema/Traversal.hpp:
        * tools/Config_Handlers/XMLSchema/Traversal.ipp:
        * tools/Config_Handlers/XMLSchema/Traversal.tpp:
        * tools/Config_Handlers/XMLSchema/TypeInfo.ipp:
        * tools/Config_Handlers/XMLSchema/TypeInfo.tpp:
        * tools/Config_Handlers/XMLSchema/Types.hpp:
        * tools/Config_Handlers/XMLSchema/Types.ipp:
        * tools/Config_Handlers/XMLSchema/Types.tpp:
        * tools/Config_Handlers/XMLSchema/Writer.hpp:
        * tools/Config_Handlers/XSCRT/ExtendedTypeInfo.hpp:
        * tools/Config_Handlers/XSCRT/ExtendedTypeInfo.ipp:
        * tools/Config_Handlers/XSCRT/Parser.hpp:
        * tools/Config_Handlers/XSCRT/Traversal.hpp: